# kj-utils

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: test.yml
docs/html/: _r_e_a_d_m_e_8md.html  a__skew__heap__template_8cpp.html  a__skew__heap__template_8cpp.js  annotated.html  annotated_dup.js  basic__usage_8cpp.html  benchmark_8hpp.html  benchmark_8hpp.js  benchmark_8hpp_source.html  buffer_8hpp.html  buffer_8hpp.js  buffer_8hpp_source.html  classes.html  classkj_1_1_benchmark-members.html  classkj_1_1_benchmark.html  classkj_1_1_benchmark.js  classkj_1_1_buffer-members.html  classkj_1_1_buffer.html  classkj_1_1_buffer.js  classkj_1_1_result-members.html  classkj_1_1_result.html  classkj_1_1_result.js  classkj_1_1_scope_guard-members.html  classkj_1_1_scope_guard.html  classkj_1_1_scope_guard.js  classkj_1_1_scoped_timer-members.html  classkj_1_1_scoped_timer.html  classkj_1_1_scoped_timer.js  classkj_1_1_timer-members.html  classkj_1_1_timer.html  classkj_1_1_timer.js  classkj_1_1detail_1_1_object_pool-members.html  classkj_1_1detail_1_1_object_pool.html  classkj_1_1detail_1_1_object_pool.js  classkj_1_1detail_1_1_skew_heap-members.html  classkj_1_1detail_1_1_skew_heap.html  classkj_1_1detail_1_1_skew_heap.js  classkj_1_1io_1_1_fast_input-members.html  classkj_1_1io_1_1_fast_input.html  classkj_1_1io_1_1_fast_input.js  (+106 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_6.js  files_7.js  files_8.js  functions_0.js  (+60 more)
examples/: a_skew_heap_template.cpp  basic_usage.cpp
include/kj/: benchmark.hpp  buffer.hpp  dsu.hpp  memory.hpp  result.hpp  scope_guard.hpp  skew_heap.hpp  timer.hpp  view.hpp
include/kj/detail/: dsu_impl.hpp  object_pool.hpp  skew_heap_impl.hpp
include/kj/io/: fast_io.hpp
test/: CMakeLists.txt  test_benchmark.cpp  test_buffer.cpp  test_dsu.cpp  test_main.cpp  test_result.cpp  test_scope_exit.cpp  test_skew_heap.cpp  test_timer.cpp
